# pypipe

./: .gitignore  README.md  pyproject.toml
examples/: lambda_example.py  pandas_example.py  simple_example.py
pypipe/: __init__.py
src/pypipe/: core.py
tests/: test_pypipe.py
