# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypipe-lib" # The name on PyPI. Changed slightly to avoid potential conflicts.
version = "0.1.0"
authors = [
  { name="Didac Cristobal-Canals", email="didac.crst@gmail.com" },
]
description = "A python lightweight and intuitive library for building functional data processing pipelines."
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE" }
keywords = ["pipeline", "functional", "data processing", "workflow", "chaining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/didac-crst/pypipe"
"Bug Tracker" = "https://github.com/didac-crst/pypipe/issues"