[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pypipe-lib"
version = "0.1.0"
packages = [
    { include = "pypipe", from = "src" }
]
description = "A lightweight, intuitive library for building functional data-processing pipelines."
authors = ["Didac Cristobal-Canals <didac.crst@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pipeline", "functional", "data processing", "workflow", "chaining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"   # â† move it here
# runtime deps go below
# rich = "^13.7"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[tool.poetry.urls]
homepage   = "https://github.com/didac-crst/pypipe"
bugtracker = "https://github.com/didac-crst/pypipe/issues"
